--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "mailgen": "^2.0.32",
     "mongodb": "^7.1.0",
     "mongoose": "^9.1.5",
+    "nodemailer": "^7.0.13",
     "nodemon": "^3.1.11"
   }
 }
